[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Error handling
thiserror = "2"
anyhow = "1"

# UUID generation
uuid = { version = "1", features = ["v3", "v4", "serde"] }

# SHA-1 hashing
sha1 = "0.10"

# Async concurrency
futures = "0.3"

# Regex
regex = "1"

# Directories
dirs = "6"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# MD5 for offline UUID
md-5 = "0.10"

# Hex encoding for hashes
hex = "0.4"

# ZIP handling for natives extraction
zip = "0.6"
